# MCAL-architecture

./: CMakeLists.txt  arm-none-eabi.cmake
app/: main.c
mcal/gpio/: gpio.c  gpio.h
project/mcal/gpio/: gpio.c  gpio_config.h
startup/: linker.ld  startup.s
